# ai-agents-blogger

./: .gitignore  LICENSE  README.md
backend/: blogger.py  main.py  pyproject.toml
backend/ai-agents-blogger/: pyproject.toml
backend/ai-agents-blogger/src/: main.py
backend/ai_agents_blogger_backend/: main.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AnimatedBackground.tsx  ContentGenerator.tsx
