[project]
name = "ai-agents-blogger-backend"
version = "0.1.0"
description = "backend API for AI Agents Blogger"
authors = [
    {name = "lishuai.jing@gmail.com",email = "lishuai.jing@gmail.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "crewai (>=0.102.0,<0.103.0)"
]


# Packages to include in your distribution
#[tool.poetry]
#packages = [
#  { include = "src"}
#]

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
